Fix initialization of image link in the pasted nodes

I'm not sure this patch is safe enough for 5.0.x branch.

BUG:452146